--- a/contents/articles/Python_Logging_Best_Practices/Python_Logging_Best_Practices.ipynb
+++ b/contents/articles/Python_Logging_Best_Practices/Python_Logging_Best_Practices.ipynb
@@ -155,33 +155,50 @@
     }
    ],
    "source": [
+    "import os\n",
     "import logging\n",
     "from datetime import datetime\n",
     "\n",
-    "logging.basicConfig(filename=datetime.now().strftime('logs/logfile_%Y%m%d.log'),\n",
-    "                    level=logging.DEBUG,\n",
-    "                    format='%(asctime)s | %(name)s | %(levelname)s | %(message)s')\n",
+    "def create_logging():\n",
+    "  \"\"\" Create logging \"\"\"\n",
+    "  logs_folder = 'logs/'\n",
+    "  if not os.path.exists(logs_folder):\n",
+    "    os.makedirs(logs_folder)\n",
     "\n",
-    "logging.info('Started')\n",
+    "  log_dir = logs_folder + str(datetime.now().strftime('logfile_ws02_%Y%m%d.log'))\n",
+    "  logging.basicConfig(filename=log_dir,\n",
+    "                  level=logging.INFO,\n",
+    "                  format='%(asctime)s | %(name)s | %(levelname)s | %(message)s')\n",
+    "  console = logging.StreamHandler()\n",
+    "  console.setLevel(logging.INFO)\n",
+    "  formatter = logging.Formatter('%(asctime)s | %(name)s | %(levelname)s | %(message)s')\n",
+    "  console.setFormatter(formatter)\n",
+    "  logging.getLogger('').addHandler(console)\n",
+    "  logging.info('Started')\n",
+    "  logging.info('Log file : ' + str(log_dir))\n",
+    "\n",
+    "create_logging()\n",
+    "logging.debug('debug message.')\n",
+    "logging.info('informational message.')\n",
+    "logging.debug('message for debugging purposes.')\n",
     "logging.warning('warning!')\n",
-    "logging.info('Finished')"
+    "logging.critical('critial!')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "j6kHdGGqKCxW"
-   },
    "source": [
-    "logfile_20200829.log\n",
+    "2020-09-18 04:08:34,780 | root | INFO | Started\n",
     "\n",
-    "2020-08-29 21:18:45,486 | root | INFO | Started\n",
+    "2020-09-18 04:08:34,781 | root | INFO | Log file : logs/logfile_ws02_20200918.log\n",
     "\n",
-    "2020-08-29 21:18:45,486 | root | WARNING | warning!\n",
+    "2020-09-18 04:08:34,784 | root | INFO | informational message.\n",
     "\n",
-    "2020-08-29 21:18:45,486 | root | INFO | Finished"
-   ]
+    "2020-09-18 04:08:34,787 | root | WARNING | warning!\n",
+    "\n",
+    "2020-09-18 04:08:34,789 | root | CRITICAL | critial!"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -413,9 +430,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.10 64-bit ('webscraping': venv)",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1600401207151"
   },
   "language_info": {
    "codemirror_mode": {
@@ -427,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10-final"
   }
  },
  "nbformat": 4,
