--- a/contents/tutorial/Scikit-LLM/Scikit_LLM.ipynb
+++ b/contents/tutorial/Scikit-LLM/Scikit_LLM.ipynb
@@ -60,8 +60,8 @@
       "source": [
         "from skllm.config import SKLLMConfig\n",
         "\n",
-        "SKLLMConfig.set_openai_key(\"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\") # <API_KEY>\n",
-        "SKLLMConfig.set_openai_org(\"org-sqSi54bSIPTvXxNi5NXY4omj\") # <ORGANIZATION_ID>"
+        "SKLLMConfig.set_openai_key(\"<API_KEY>\")\n",
+        "SKLLMConfig.set_openai_org(\"<ORGANIZATION_ID>\")"
       ],
       "metadata": {
         "id": "tWRMwTV0c_Mi"
